# unified-model-caller

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/unified_model_caller/: __init__.py  core.py  enums.py  errors.py
src/unified_model_caller/services/: _http.py  anthropic.py  aristote.py  aristoteonmydocker.py  base.py  google.py  ilaas.py  openai.py  xai.py
tests/: test_core.py  test_errors.py
