[project]
name = "unified-model-caller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "google-genai>=1.26.0",
    "openai>=1.97.0",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools] 
py-modules = ["unified-model-caller"]
