[project]
name = "unified-model-caller"
version = "0.1.5"
description = "A tiny library for manage calls to the LLMs of different services (Paris-Saclay Aristote Included)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "google-api-core>=2.28.1",
    "google-genai>=1.26.0",
    "openai>=1.97.0",
    "requests>=2.32.4",
    "xai-sdk>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools] 
py-modules = ["unified_model_caller"]
